--- a/src/Services/Catalog/CatalogAPI/CatalogAPI.csproj
+++ b/src/Services/Catalog/CatalogAPI/CatalogAPI.csproj
@@ -7,17 +7,17 @@
     <UserSecretsId>04322684-be3b-4895-8ce8-5e3f1f8ad396</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="10.0.0" />
+    <PackageReference Include="Marten" Version="8.17.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Products\GetProducts\" />
     <Folder Include="Products\DeleteProduct\" />
-    <Folder Include="Products\GetProductById\" />
     <Folder Include="Products\GetProductByCategory\" />
     <Folder Include="Products\UpadateProduct\" />
   </ItemGroup>
