--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,5 +2,11 @@ services:
   catalogdb:
     image: postgres:18
 
+  catalogapi:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: services/catalog/CatalogAPI/Dockerfile
+
 volumes:
   postgres_catalog:
