--- a/src/services/basket/BasketAPI/Dockerfile
+++ b/src/services/basket/BasketAPI/Dockerfile
@@ -2,6 +2,7 @@
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
+USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
@@ -11,20 +12,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["services/catalog/CatalogAPI/CatalogAPI.csproj", "services/catalog/CatalogAPI/"]
-COPY ["BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/BuildingBlocks/"]
-RUN dotnet restore "./services/catalog/CatalogAPI/CatalogAPI.csproj"
+COPY ["services/basket/BasketAPI/BasketAPI.csproj", "services/basket/BasketAPI/"]
+RUN dotnet restore "./services/basket/BasketAPI/BasketAPI.csproj"
 COPY . .
-WORKDIR "/src/services/catalog/CatalogAPI"
-RUN dotnet build "./CatalogAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/services/basket/BasketAPI"
+RUN dotnet build "./BasketAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./CatalogAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./BasketAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "CatalogAPI.dll"]
+ENTRYPOINT ["dotnet", "BasketAPI.dll"]
