--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -60,12 +60,14 @@ services:
       - ASPNETCORE_HTTPS_PORTS=8081
       - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
       - ConnectionStrings__Redis=distributedcache:6379
+      - GrpcSettings__DiscountUrl=https://discountgrpc:8081
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/basketapi.pfx
       - ASPNETCORE_Kestrel__Certificates__Default__Password=devpassword 
    
     depends_on :
       - basketdb
       - distributedcache
+      - discountgrpc  
 
     ports:
       - "6001:8080"
