Developed ordering service domain layer with all entities and their relationships using efcore code first approach, also started with infra layer, setup dbcontext and model repaltionships using model builder, migrated code, automated migration and data seed on initial startup for dev env.

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     image: postgres:18
 
   distributedcache:
-      image: redis
+    image: redis
+
+  orderdb:
+    image: mcr.microsoft.com/mssql/server
 
   catalogapi:
     image: ${DOCKER_REGISTRY-}catalogapi
