--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -29,6 +29,15 @@ services:
     ports:
       - "6379:6379"
 
+  orderdb:
+    container_name: orderdb
+    environment:
+      - SA_PASSWORD=Premal@123
+      - ACCEPT_EULA=Y
+    restart: always
+    ports:
+      - "1433:1433"
+
   catalogapi:
     container_name: catalogapi
     environment:
