--- a/src/services/ordering/OrderingAPI/appsettings.json
+++ b/src/services/ordering/OrderingAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database" : "Server=localhost;Database=OrderDb;User Id=sa;Password=Premal@123;Encrypt=False;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
