Setup RabbitMQ message broker for basket and ordering service communication using docker and registered it using masstransit, Implemented basket checkout event from basket to order end to end and verified it, Containerized and orchestrate rabbitmq, basket and ordering service and verified current working

--- a/src/services/ordering/OrderingAPI/OrderingAPI.csproj
+++ b/src/services/ordering/OrderingAPI/OrderingAPI.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>493a6192-286a-4e27-88b5-d20ade55c85b</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
