--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -38,9 +38,17 @@ services:
       context: .
       dockerfile: services/ordering/OrderingAPI/Dockerfile
 
+  yarpapigateway:
+    image: ${DOCKER_REGISTRY-}yarpapigateway
+    build:
+      context: .
+      dockerfile: ApiGateways/YarpApiGateway/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:
+  sqlserver_orderdb:
+
 
 
 
