--- a/src/WebApps/shopping-web-react/package.json
+++ b/src/WebApps/shopping-web-react/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.4",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
