--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -43,6 +43,12 @@ services:
     build:
       context: .
       dockerfile: ApiGateways/YarpApiGateway/Dockerfile
+  
+  shoppingweb:
+    image: ${DOCKER_REGISTRY-}shoppingweb
+    build:
+      context: ./WebApps/shopping-web-react
+      dockerfile: Dockerfile
 
 volumes:
   postgres_catalog:
