setup ngnix for one endpoint and gateway for frontend and backend with https ssl local certificate using mkcrt

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -50,10 +50,14 @@ services:
       context: ./WebApps/shopping-web-react
       dockerfile: Dockerfile
 
+  nginx:
+    image: nginx:alpine
+
 volumes:
   postgres_catalog:
   postgres_basket:
   sqlserver_orderdb:
+  ngnix:
 
 
 
