--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -181,3 +181,15 @@ services:
       - "5173:5173"
     depends_on:
       - yarpapigateway
+
+  nginx:
+    container_name: nginx
+    depends_on:
+      - shoppingweb
+      - yarpapigateway
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/certs:/etc/nginx/certs:ro
+    ports:
+      - "7000:7000"
+      - "7050:7050" 
