--- a/src/WebApps/shopping-web-react/package.json
+++ b/src/WebApps/shopping-web-react/package.json
@@ -15,10 +15,13 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
     "uuid": "^13.0.0",
     "yup": "^1.7.1",
